# setup-environment-SantiagoColque

./: CMakeLists.txt  Doxyfile
include/: logic.h
src/: greetings.c  logic.c  main.c
tests/: CMakeLists.txt
tests/unit/: test_unit_program.c
